test/fixtures/errors/throw_in_eval_anonymous.js
'use strict';
require('../../common');

Error.stackTraceLimit = 1;
eval(`

  throw new Error('error in anonymous script');

`);
